Added missing updateChunks function and reset command.